# myfr24-py

./: README.md  pyproject.toml
myfr24/: exceptions.py  myfr24.py  network.py  scraper.py
